apps/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 911
        runAsGroup: 911
        fsGroup: 911
      nodeSelector:
        kubernetes.io/hostname: k3s-controlplane
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.27.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /api/app/about
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/app/about
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-pvc
