apps/mealie/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: traefik
spec:
  entryPoints:
    - frp
  routes:
    - match: Host(`recipes.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: frp-headers
          namespace: traefik
      services:
        - name: mealie
          port: 80
          namespace: mealie
